--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Java Script Day 04</title>
 </head>
 
 <body>
+    <h1 class="temp">blabla</h1>
+    <h2 id="max"></h2>
 
+    <div class="container">
+        <ul>
+            <li id="temp1">Temp 1</li>
+            <li id="temp2">Temp 2</li>
+            <li id="temp3">Temp 3</li>
+        </ul>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
