--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://use.fontawesome.com/e7ec556f3d.css" media="all" rel="stylesheet">
     <title>Java Script Day 04</title>
 </head>
 
 <body>
     <h1 class="temp">blabla</h1>
-    <h2 id="max"></h2>
+    <h2 id="max">
+    </h2>
 
     <div class="container">
         <ul>
-            <li id="temp1">Temp 1</li>
-            <li id="temp2">Temp 2</li>
-            <li id="temp3">Temp 3</li>
+            <li id="temp1">Temp 1: <i class="fa fa-snowflake-o " style="color: lightblue; font-size: xx-large;" aria-hidden="true"></i></li>
+            <li id="temp2">Temp 2: <i class="fa fa-sun-o color" style="color: rgb(219, 185, 31); font-size: xx-large;" aria-hidden="true"></i></li>
+            <li id="temp3">Temp 3: <i class="fa fa-fire color" style="color: rgb(236, 65, 65); font-size: xx-large;" aria-hidden="true"></i></li>
         </ul>
+
     </div>
+
 
     <script src="script.js"></script>
 </body>
