try 1 interm ex 1

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
     </div>
 
+    <p class="name">Martin: </p>
+    <p class="name">Thomas: </p>
+    <p class="name">Klaus: </p>
+    <p class="name">Maria: </p>
+    <p class="name">David: </p>
+
 
     <script src="script.js"></script>
 </body>
